# variantGPT

./: README.md  pyproject.toml  requirements.txt
minbpe/: base.py  basic.py  regex.py  test_tokenizers.py
notebooks/: 1_DataCleaning.ipynb  2_BytePairEncoding.ipynb  3_TransformerModel.ipynb  4_1_PreTraining_AllBatches.ipynb  4_2_PreTraining_RandomBatches.ipynb  4_PreTraining.ipynb  5_FineTuningDataset.ipynb  6_1_FineTuningNoContext.ipynb  6_2_FineTuningWithContext.ipynb  7_1_LetsScaleHuggingFaceDataset.ipynb  7_1_LetsScaleTokenizer.ipynb  7_2_LetsScaleEncoding.ipynb  7_2_LetsScaleTokenizer.ipynb  7_3_LetsScaleEncoding.ipynb
pretrain/: config.py  data.py  train.py  train.sh
src/variant_gpt/: activations.py
src/variant_gpt/attention/: __init__.py  base.py  config.py  gqa.py  linear.py  local.py  mha.py  mla.py  mqa.py  sparse.py
src/variant_gpt/models/gpt2/: __init__.py  configuration.py  modeling.py  mqa.py
tests/: test_gpt2_numeric.py  test_tokenizers.py
variant_gpt/: activations.py
variant_gpt/models/: __init__.py
variant_gpt/models/gpt2/: __init__.py  configuration.py  modeling.py
variant_gpt/utils/: __init__.py  import_utils.py
