[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "variant_gpt"
dynamic = ["version"]
description = "Variant GPT Python module"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "tiktoken==0.12.0",
    "torch==2.10.0",
    "tqdm==4.67.3"
]

[tool.setuptools.dynamic]
version = { attr = "variant_gpt.__version__" }

[project.urls]
Source = "https://github.com/ValeGian/variantGPT"